# cubic-clarity-engine

./: .env  index.html
.lovable/: plan.md
python/: README.md
python/fmcubic/: LICENSE  README.md  pyproject.toml
python/fmcubic/fmcubic/: __init__.py  benchmark.py  core.py
python/fmcubic/tests/: test_patel_teja.py  test_solver.py
src/: App.tsx  index.css
src/components/: PatelTejaPanel.tsx
src/hooks/: usePageTracking.ts
src/integrations/supabase/: types.ts
src/lib/: cubicSolvers.debug.test.ts  cubicSolvers.test.ts  cubicSolvers.ts  patelTejaBenchmark.test.ts  patelTejaBenchmark.ts
src/pages/: Analytics.tsx  Index.tsx
supabase/: config.toml
supabase/migrations/: 20260421211451_05657e7a-c2b9-4ea7-b68c-23a24ff6dab7.sql  20260426154733_699a1e3d-2620-4add-a512-5fefd0120086.sql
